# SchemaSense

./: MODULAR_ARCHITECTURE.md  README.md  REFACTORING_SUMMARY.md  app.db  main.py  pyproject.toml  verify_refactoring.py
backend/: core.py  run_sql_query.py
data/: app.db  nstnwnd.sql
exports/: export_20260202_113817.csv
ingestion/: ingestion.py
pages/: ingest.py
src/charts/: __init__.py  generator.py  themes.py
src/export/: __init__.py  exporter.py
src/llm/: __init__.py  core.py  tools.py
src/query/: __init__.py  executor.py
src/state/: __init__.py  session.py
src/ui/: __init__.py  components.py  handlers.py
