[project]
name = "internal-company-knowledge-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.7",
    "langchain-classic>=1.0.1",
    "langchain-openai>=1.1.7",
    "langchain-pinecone>=0.2.13",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "reportlab>=4.4.9",
    "streamlit>=1.53.1",
    "streamlit-chat>=0.1.1",
    "streamlit-extras>=0.7.8",
    "watchdog>=6.0.0",
]
